deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: connect-demo-svc
spec:
  selector:
    app: connect-demo-svc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
